Version 1.9.2
- BUG: Performance issue if dragging lots of files
       in the explorer. (Stefan)
- BUG: "Show unified diff" in the log dialog did
       not include the last (lowest) revision. (Stefan)

Version 1.9.1
- CHG: static linking to CRT and MFC. (Stefan)
- CHG: Allow the SubWCRevCOM object to be reused, i.e.
       clear all gathered data when GetWCInfo2() is
       called. (Stefan)
- CHG: Update TortoisePlink. (Stefan)
- CHG: Moved all commands to the front view in
       TortoiseMerge. (Stefan)
- CHG: Reintroduce the LogFindCopyFrom setting. (Stefan)
- CHG: Updating a sparse checkout remembers the
       state of hidden items as well. (Stefan)
- BUG: When Aero dialogs are disabled, the merge dlg
       background was painted black. (Stefan)
- BUG: SubWCRev segfaulted when started for a
       non-wc path. (Stefan)
- BUG: TMerge showed filtered diffs if "show whitespaces"
       was active. (Stefan)
- BUG: TMerge could mark the wrong line as changed if the
       files contained mixed newlines at the start of
       the files. (Stefan)
- BUG: "Show differences as unified diff" failed if the
       selected files were in different directories. (Stefan)
- BUG: ProjectMonitor could not show any log messages if
       HEAD was more than log-limit above the corresponding
       log messages to show. (Stefan)
- BUG: Stopping the monitoring thread failed when trying
       to show the log. (Stefan)
- BUG: When a start commit hook script failed in the repo browser,
       the buttons (abort/proceed) were switched. (Stefan)

Version 1.9.0
See the release notes here:
http://tortoisesvn.net/tsvn_1.9_releasenotes.html

Version 1.8.12
- BUG: Issue #691: Bug when SVN-copying (overwriting) files
       inside a working copy. (Stefan)
- BUG: Issue #692: Cleanup reports error when there is
       no cleanup to perform . (Stefan)

Version 1.8.11
- BUG: Issue #682: Statistics graph for "Commits by author"
       error when "Authors case sensitive" is toggled. (Stefan)